--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "@types/node": "^22.5.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
